# v4l2-pi

./: Cargo.toml  README.md  lsyncd.config
ioctl/: dmabuf.rs  main.rs  modesetting.rs
manual/: ioctls.rs  main.rs  v4l2.rs
src/: main.rs  modesetting.rs
stateful/: main.rs
v4l2r/: dmabuf.rs
